...
        headerTintColor: colors.text,
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: 'Accounts',
          tabBarButtonTestID: 'tab-accounts',
          tabBarIcon: ({ color }) => <TabIcon name="bank" color={color} />,
          headerTitle: () => (
            <View
              style={{ flexDirection: 'row', alignItems: 'center', gap: 7 }}
            >
...
        }}
      />
      <Tabs.Screen
        name="settings"
        options={{
          title: 'Settings',
          tabBarButtonTestID: 'tab-settings',
          tabBarIcon: ({ color }) => <TabIcon name="cog" color={color} />,
        }}
      />
    </Tabs>
  );

...
